# sol_lottery

./: Anchor.toml  Cargo.toml  README.md  package.json
programs/sol_lottery/: Cargo.toml
programs/sol_lottery/src/: lib.rs
scripts/: init.js  lottery_cli.js  t22_transfer.js  t22_withdraw_from_accounts.js
tests/: sol_lottery.js  transfer_with_fee.js
